[package]
name = "mini_psi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
aes-gcm-siv = "0.11.1"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-std = "0.4.0"
ark-test-curves = { version = "0.4.2", features = ["bls12_381_curve"] }
num-bigint = "0.4.3"
rand = "0.8.5"
sha2 = "0.10.7"
